💄Fixed spacing on contract

--- a/src/app/components/resource-map-detail/resource-map-detail.component.scss
+++ b/src/app/components/resource-map-detail/resource-map-detail.component.scss
@@ -50,6 +50,11 @@ li {
   width: 100%;
 }
 
+.fila{
+  display: flex;
+  justify-content: space;
+}
+
 li > p {
   text-align: left;
 }
@@ -58,6 +63,12 @@ li > p {
   margin-bottom: 0.8em;
   display: flex;
   flex-direction: row;
+}
+
+.detail-contract{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.8em;
 }
 
 .content-around{
@@ -77,13 +88,14 @@ th.mat-header-cell{
   color: var(--white);
 }
 
-.mat-tab-group.mat-background-primary>.mat-tab-header{
-  background-color: var(--primary);
+.left{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
 }
 
-.mat-tab-body-content > button {
-  background-color: var(--primary);
-  color: var(--white);
-  margin-left: 1.2em;
+.right{
+  width: 55%;
+  display: flex;
+  flex-direction: column;
 }
-
